[package]
name = "update-conan-recipe-and-create-pull-request"
description = "A command line application to update your conan recipe and create a ull request"
license = "Unlicense"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
octorust = "0.3.0"
tokio = { version = "1.21.2", features = ["full"] }
base64 = "0.21.0"
regex = "1.7.1"
serde_json = "1.0"
anyhow = "1.0.69"
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"